--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "cd client && yarn build",
-  "outputDirectory": "client/build",
+  "outputDirectory": "client/dist",
   "framework": "vite",
   "rewrites": [
     {
