--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
   "framework": "vite",
   "functions": {
     "api/index.js": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "memory": 256
     }
   },
   "rewrites": [
