--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,7 @@
   "framework": "vite",
   "functions": {
     "api/index.js": {
-      "maxDuration": 30,
-      "memory": 256
+      "maxDuration": 30
     }
   },
   "rewrites": [
