--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "aws-sdk": "^2.1320.0",
+    "@aws-sdk/client-s3": "^3.279.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
