--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.279.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -7,6 +8,7 @@
     "express": "^4.18.2",
     "image-downloader": "^4.3.0",
     "jsonwebtoken": "^9.0.0",
+    "mime-types": "^2.1.35",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1"
   }
